--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,42 @@
-<mat-sidenav-container autosize="true" flex class="mat-sidenav-container">
-  <mat-sidenav #snav role="navigation" [@hideAnimation]="state" mode="side" opened="true" fixedInViewport="true">
+<mat-sidenav-container autosize="true"
+                       flex class="mat-sidenav-container">
+  <mat-sidenav role="navigation"
+               [@hideAnimation]="state" mode="side"
+               opened="true"
+               fixedInViewport="true">
     <mat-nav-list>
       <mat-list-item class="angular" (click)="toggleState()">
         <button mat-icon-button>
           <mat-icon svgIcon="angular" style="transform:scale(1.2);"></mat-icon>
         </button>
       </mat-list-item>
-      <mat-list-item routerLink="/chat" routerLinkActive="active" [class.expanded]="isExpanded"
-        (click)="select('chat')">
+      <mat-list-item routerLink="/chat"
+                     routerLinkActive="active"
+                     [class.expanded]="isExpanded"
+                     (click)="select('chat')">
         <button mat-icon-button (click)="select('chat')" [class.active]="selection.chat">
           <mat-icon>chat</mat-icon>
-          <div [@option]="state" class="option">PaLM for Chat</div>
+          <div [@option]="state" class="option">Gemini for Chat</div>
         </button>
       </mat-list-item>
-      <mat-list-item routerLink="/text" routerLinkActive="active" [class.expanded]="isExpanded"
-        (click)="select('text')">
+      <mat-list-item routerLink="/text"
+                     routerLinkActive="active"
+                     [class.expanded]="isExpanded"
+                     (click)="select('text')">
         <button mat-icon-button (click)="select('text')" [class.active]="selection.text">
           <mat-icon>edit</mat-icon>
-          <div [@option]="state" class="option">PaLM for Text</div>
+          <div [@option]="state" class="option">Gemini for Text</div>
         </button>
       </mat-list-item>
-<!--       <mat-list-item routerLink="/voice" routerLinkActive="active" [class.expanded]="isExpanded"
-        (click)="select('voice')">
-        <button mat-icon-button (click)="select('voice')" [class.active]="selection.voice">
-          <mat-icon>volume_up</mat-icon>
-          <div class="option" *ngIf="isExpanded">Eleven Labs</div>
-        </button>
-      </mat-list-item> -->
     </mat-nav-list>
-
-    <!--       <mat-nav-list>
-        <mat-list-item routerLink="/config" routerLinkActive="active" [class.expanded]="isExpanded" (click)="select('config')">
-          <button mat-icon-button (click)="select('config')" [class.active]="selection.config">
-            <mat-icon>settings</mat-icon>
-            <div class="option" *ngIf="isExpanded">Configuration</div>
-          </button>
-        </mat-list-item>
-      </mat-nav-list> -->
   </mat-sidenav>
 
   <mat-sidenav-content [@leftAnimation]="state" flex class="mat-sidenav-content">
-    <mat-toolbar color="custom-theme" class="fixed-toolbar">
-      <button mat-icon-button><mat-icon svgIcon="palm" style="transform:scale(1.2);"></mat-icon></button>
-      <h1>{{title}}</h1>
+    <mat-toolbar class="fixed-toolbar">
+      <button mat-icon-button>
+        <mat-icon svgIcon="gemini" style="transform:scale(1.2);"></mat-icon>
+      </button>
+      <h1>{{ title }}</h1>
     </mat-toolbar>
     <main id="main-content" #mainContent class="main-content">
       <router-outlet></router-outlet>
