--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,13 +1,12 @@
 <div class="root">
   <div class="container chat column">
-    <!-- <div class="header">{{title}}</div> -->
 
     <div class="messages" #scroll>
       <ng-container *ngFor="let message of messages; trackBy: trackByFn">
         <div class="message-container">
-          <div class="avatar" 
-            [class.bot] = "message.sender == 'Bot'"
-            [ngStyle]="{'background-image': 'url(' + message.avatar + ')'}">
+          <div class="avatar"
+               [class.bot] = "message.sender == 'Bot'"
+               [ngStyle]="{'background-image': 'url(' + message.avatar + ')'}">
           </div>
           <div class="message-content">
             <span *ngIf="showReply(message.text)" class="btn-reply">
@@ -28,8 +27,8 @@
               <pre ngPreserveWhitespaces>{{ message.text }}</pre>
             </div>
             <markdown [ngStyle]=" { 'display': message.isRaw ? 'none' : 'block' }"
-              ngPreserveWhitespaces emoji mermaid [mermaidOptions]="mermaidOptions" katex [katexOptions]="katexOptions"
-              clipboard [clipboardButtonComponent]="clipboardButton">
+                      ngPreserveWhitespaces emoji mermaid [mermaidOptions]="mermaidOptions" katex [katexOptions]="katexOptions"
+                      clipboard [clipboardButtonComponent]="clipboardButton">
               {{ message.text | processCodeBlocks }}
             </markdown>
           </div>
@@ -49,14 +48,14 @@
       <div class="message-row">
         <mat-form-field>
           <mat-label>Enter your prompt here</mat-label>
-          <textarea matInput appearance="outline"
-            [style.fontSize.px]="14"
-            cdkTextareaAutosize #autosize="cdkTextareaAutosize"
+          <textarea
+            matInput
+            cdkTextareaAutosize
             cdkAutosizeMinRows="1"
             cdkAutosizeMaxRows="5"
             [(ngModel)]="model.prompt"
             (keydown.enter)="handleUserMessage($event)"
-            ></textarea>
+          ></textarea>
         </mat-form-field>
       </div>
     </div>
