--- a/src/app/text/text.component.html
+++ b/src/app/text/text.component.html
@@ -1,13 +1,19 @@
-<app-rich-text-editor 
+<app-rich-text-editor
   (editorEmpty)="editorChange($event)"
-  (speakerClicked)="speakoutPrompt()"
-></app-rich-text-editor>
+  (speakerClicked)="speakOutPrompt()">
+</app-rich-text-editor>
 <div class="options">
-  <button mat-button class="run" [disabled]="editorEmpty" (click)="run()">
-    <mat-icon svgIcon="sparkle" style="transform:scale(1.5);"></mat-icon>
+  <button mat-button class="run"
+          [disabled]="editorEmpty"
+          (click)="run()">
+    <mat-icon svgIcon="sparkle"
+              style="transform:scale(1.5)">
+    </mat-icon>
     Run
   </button>
-  <button mat-button class="clear" [disabled]="editorEmpty" (click)="clear()">
+  <button mat-button class="clear"
+          [disabled]="editorEmpty"
+          (click)="clear()">
     Clear
   </button>
 </div>
