--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -5,7 +5,7 @@
       <ng-container *ngFor="let message of messages; trackBy: trackByFn">
         <div class="message-container">
           <div class="avatar"
-               [class.bot] = "message.sender == 'Bot'"
+               [class.bot]="message.sender == 'Bot'"
                [ngStyle]="{'background-image': 'url(' + message.avatar + ')'}">
           </div>
           <div class="message-content">
@@ -14,7 +14,7 @@
                 <mat-icon>content_copy</mat-icon>
               </button>
               <button mat-icon-button (click)="message.isRaw = !message.isRaw">
-                <mat-icon>{{!message.isRaw?'code':'visibility'}}</mat-icon>
+                <mat-icon>{{ !message.isRaw ? 'code' : 'visibility' }}</mat-icon>
               </button>
               <button mat-icon-button (click)="retry(message.text)">
                 <mat-icon>replay</mat-icon>
@@ -23,11 +23,14 @@
                 <mat-icon>delete</mat-icon>
               </button>
             </span>
-            <div class="text" [ngStyle]=" { 'display': message.isRaw ? 'block' : 'none' }">
+            <div [ngStyle]=" { 'display': message.isRaw ? 'block' : 'none' }">
               <pre ngPreserveWhitespaces>{{ message.text }}</pre>
             </div>
             <markdown [ngStyle]=" { 'display': message.isRaw ? 'none' : 'block' }"
-                      ngPreserveWhitespaces emoji mermaid [mermaidOptions]="mermaidOptions" katex [katexOptions]="katexOptions"
+                      ngPreserveWhitespaces emoji mermaid
+                      [mermaidOptions]="mermaidService.mermaidOptions"
+                      katex
+                      [katexOptions]="katexOptions"
                       clipboard [clipboardButtonComponent]="clipboardButton">
               {{ message.text | processCodeBlocks }}
             </markdown>
