--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -50,7 +50,7 @@
     <div class="form">
       <div class="message-row">
         <mat-form-field>
-          <mat-label>Enter your prompt here</mat-label>
+          <mat-label>Message Gemini...</mat-label>
           <textarea
             matInput
             cdkTextareaAutosize
