"@google/generative-ai": "^0.2.0" from "0.1.3"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,8 @@
     </mat-nav-list>
   </mat-sidenav>
 
-  <mat-sidenav-content [@leftAnimation]="state" flex class="mat-sidenav-content">
+  <mat-sidenav-content [@leftAnimation]="state"
+                       flex class="mat-sidenav-content">
     <mat-toolbar class="fixed-toolbar">
       <button mat-icon-button>
         <mat-icon svgIcon="gemini"
